loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:6: error: Invalid literal number
  for (y<- 0to 7){
           ^LoopCourse:6: error: illegal start of simple expression
  for (y<- 0to 7){
           ^LoopCourse:23: error: ')' expected but '}' found.
}
^