loopfor.LoopCourse.scala.code
var x=0
var y=0
var t=0
var u=0
for (x<- 0 to 10){
  for (y<- 0to 7){
    avance()
  }
  gauche()
  for (t<- 0 to 7){
    avance()
  }
  gauche()
  
  for (u<- 0 to 7){
    avance()
  }
  gauche()
  for (s<- 0 to 7){
    avance()
  }
gauche()
}
    
    